--- a/kino-overlay/package.json
+++ b/kino-overlay/package.json
@@ -7,10 +7,7 @@
   },
   "dependencies": {
     "electron": "^10.1.1",
-    "express": "^4.17.1",
-    "http": "0.0.1-security",
     "kino-core": "../kino-core",
-    "node-sensel": "file:../node-sensel",
-    "socket.io": "^3.1.1"
+    "socket.io-client": "^3.1.1"
   }
 }
