--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "node-sensel"]
 	path = node-sensel
 	url = git@github.com:phi16/node-sensel.git
+[submodule "node-openvr"]
+	path = node-openvr
+	url = git@github.com:phi16/node-openvr.git
