--- a/kino-overlay/package.json
+++ b/kino-overlay/package.json
@@ -10,5 +10,8 @@
     "kino-core": "../kino-core",
     "socket.io-client": "^3.1.1",
     "node-openvr": "../node-openvr"
+  },
+  "devDependencies": {
+    "electron-rebuild": "^2.3.5"
   }
 }
