--- a/kino-overlay/package.json
+++ b/kino-overlay/package.json
@@ -8,8 +8,7 @@
   "dependencies": {
     "electron": "^10.1.1",
     "kino-core": "../kino-core",
-    "socket.io-client": "^3.1.1",
-    "node-openvr": "../node-openvr"
+    "socket.io-client": "^3.1.1"
   },
   "devDependencies": {
     "electron-rebuild": "^2.3.5"
